--- a/Legal/terms-of-sale-policy.html
+++ b/Legal/terms-of-sale-policy.html
@@ -389,7 +389,7 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="./index.html"><img src="../img/footer-logo.png" alt="Lashae Glamour Logo"></a>
+                            <a href="../index.html"><img src="../img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
                             <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
@@ -404,11 +404,11 @@
                     <div class="footer-widget">
                         <h5>About Us</h5>
                         <ul>
-                            <li><a href="./lsglm-story.html">Our Story</a></li>
-                            <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="../lsglm-story.html">Our Story</a></li>
+                            <li><a href="../packaging.html">Packaging</li>
+                            <li><a href="./terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -416,11 +416,11 @@
                     <div class="footer-widget">
                         <h5>Customer Service</h5>
                         <ul>
-                            <li><a href="./contact.html">Contact Us</li>
+                            <li><a href="../contact.html">Contact Us</li>
                             <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
-                            <li><a href="./faq.html">FAQ</a></li>
-                            <li><a href="./faq.html">Delivery</a></li>
-                            <li><a href="./faq.html">Returns</a></li>
+                            <li><a href="../faq.html">FAQ</a></li>
+                            <li><a href="../faq.html">Delivery</a></li>
+                            <li><a href="../faq.html">Returns</a></li>
                         </ul>
                     </div>
                 </div>
@@ -441,7 +441,7 @@
                             Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashaè Glamour
                         </div>
                         <div class="payment-pic">
-                            <img src="img/payment-method.png" alt="">
+                            <img src="../img/payment-method.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -454,16 +454,16 @@
     <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
     
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/jquery.zoom.min.js"></script>
-    <script src="js/jquery.dd.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
+    <script src="../js/jquery.countdown.min.js"></script>
+    <script src="../js/jquery.nice-select.min.js"></script>
+    <script src="../js/jquery.zoom.min.js"></script>
+    <script src="../js/jquery.dd.min.js"></script>
+    <script src="../js/jquery.slicknav.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
