--- a/Products/solid-colour-nails.html
+++ b/Products/solid-colour-nails.html
@@ -217,9 +217,9 @@
                     <ul>
                         <li><a href="../lsglm-story.html">Our Story</a></li>
                         <li><a href="../packaging.html">Packaging</li>
-                        <li><a href="../Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                        <li><a href="../Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                        <li><a href="../Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="../Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                        <li><a href="../Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                        <li><a href="../Legal/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                     <h5>Customer Service</h5>
                     <ul>
                         <li><a href="../contact.html">Contact Us</li>
-                        <li><a href="../Legal_Docs/covid-policy.html">Covid-19</a></li>
+                        <li><a href="../Legal/covid-policy.html">Covid-19</a></li>
                         <li><a href="../faq.html">FAQ</a></li>
                         <li><a href="../faq.html">Delivery</a></li>
                         <li><a href="../faq.html">Returns</a></li>
@@ -239,10 +239,7 @@
                 <div class="newslatter-item">
                     <h5>Join our newsletter!</h5>
                     <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                    <form action="#" class="subscribe-form">
-                        <input type="text" placeholder="Enter Your Mail">
-                        <button type="button">Subscribe</button>
-                    </form>
+                        <div class="klaviyo-form-X67KvG"></div>
                 </div>
             </div>
         </div>
@@ -263,6 +260,9 @@
     </div>
 </footer>
 <!-- Footer Section End -->
+
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
 
     <!-- Js Plugins -->
     <script src="../js/jquery-3.3.1.min.js"></script>
