--- a/custom-sets.html
+++ b/custom-sets.html
@@ -158,7 +158,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/swirl-mix.html">
+                                    <a href="./Products/swirl-mix.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-436786053" itemscope itemtype="http://schema.org/Product" data-single-product-id="436786053"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Swirl Mix"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="39.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -167,7 +167,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/matriarch.html">
+                                    <a href="./Products/matriarch.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430458057" itemscope itemtype="http://schema.org/Product" data-single-product-id="430458057"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Matriarch"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="29.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/aqua-medley.html">
+                                    <a href="./Products/aqua-medley.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545422" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545422"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Aqua Medley"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="35.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/classic-mayhem.html">
+                                    <a href="./Products/classic-mayhem.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545426" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545426"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Classic Mayhem"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="37.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./Products/amber-rose.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-407398811" itemscope itemtype="http://schema.org/Product" data-single-product-id="407398811"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Amber Rose"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="37.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./Products/purple-chaos.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430432869" itemscope itemtype="http://schema.org/Product" data-single-product-id="430432869"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Purple Chaos"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="38.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -271,9 +271,9 @@
                         <ul>
                             <li><a href="./lsglm-story.html">Our Story</a></li>
                             <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
@@ -293,10 +293,7 @@
                     <div class="newslatter-item">
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                            <div class="klaviyo-form-X67KvG"></div>
                     </div>
                 </div>
             </div>
@@ -317,6 +314,16 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
+    <!-- TrustPilot Plugins -->
+    <script>
+        (function(w,d,s,r,n){w.TrustpilotObject=n;w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+            a=d.createElement(s);a.async=1;a.src=r;a.type='text/java'+s;f=d.getElementsByTagName(s)[0];
+            f.parentNode.insertBefore(a,f)})(window,document,'script', 'https://invitejs.trustpilot.com/tp.min.js', 'tp');
+            tp('register', 'p7USu7LzBr8GmK04');
+    </script>
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
     
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
