--- a/faq.html
+++ b/faq.html
@@ -373,9 +373,9 @@
                         <ul>
                             <li><a href="./lsglm-story.html">Our Story</a></li>
                             <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
@@ -395,10 +395,7 @@
                     <div class="newslatter-item">
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                            <div class="klaviyo-form-X67KvG"></div>
                     </div>
                 </div>
             </div>
@@ -419,6 +416,16 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
+    <!-- TrustPilot Plugins -->
+    <script>
+        (function(w,d,s,r,n){w.TrustpilotObject=n;w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+            a=d.createElement(s);a.async=1;a.src=r;a.type='text/java'+s;f=d.getElementsByTagName(s)[0];
+            f.parentNode.insertBefore(a,f)})(window,document,'script', 'https://invitejs.trustpilot.com/tp.min.js', 'tp');
+            tp('register', 'p7USu7LzBr8GmK04');
+    </script>
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
     
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
