--- a/made-to-order.html
+++ b/made-to-order.html
@@ -158,7 +158,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/akarui.html">
+                                    <a href="./Products/akarui.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545421" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545421"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Akarui"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="27.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -167,7 +167,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/bedazzled-nails.html">
+                                    <a href="./Products/bedazzled-nails.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545424" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545424"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Bedazzled Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="29.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/march.html">
+                                    <a href="./Products/march.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545425" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545425"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="March"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="28.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/peach-sunset.html">
+                                    <a href="./Products/peach-sunset.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-436849386" itemscope itemtype="http://schema.org/Product" data-single-product-id="436849386"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Peach Sunset"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="37.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/matte-leopard.html">
+                                    <a href="./Products/matte-leopard.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-467737709" itemscope itemtype="http://schema.org/Product" data-single-product-id="467737709"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Matte Leopard"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="27.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/golden-raffle.html">
+                                    <a href="./Products/golden-raffle.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430435368" itemscope itemtype="http://schema.org/Product" data-single-product-id="430435368"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Golden Raffle"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="29.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -212,7 +212,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/striped-feline.html">
+                                    <a href="./Products/striped-feline.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430681091" itemscope itemtype="http://schema.org/Product" data-single-product-id="430681091"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Striped Feline"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="28.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -221,7 +221,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./product.html">
+                                    <a href="./Products/ink-watercolour-paints.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-463715020" itemscope itemtype="http://schema.org/Product" data-single-product-id="463715020"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Ink/Watercolour Paints"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="30.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -271,9 +271,9 @@
                         <ul>
                             <li><a href="./lsglm-story.html">Our Story</a></li>
                             <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
@@ -293,10 +293,7 @@
                     <div class="newslatter-item">
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                            <div class="klaviyo-form-X67KvG"></div>
                     </div>
                 </div>
             </div>
@@ -317,6 +314,16 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
+    <!-- TrustPilot Plugins -->
+    <script>
+        (function(w,d,s,r,n){w.TrustpilotObject=n;w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+            a=d.createElement(s);a.async=1;a.src=r;a.type='text/java'+s;f=d.getElementsByTagName(s)[0];
+            f.parentNode.insertBefore(a,f)})(window,document,'script', 'https://invitejs.trustpilot.com/tp.min.js', 'tp');
+            tp('register', 'p7USu7LzBr8GmK04');
+    </script>
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
     
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
