--- a/ready-to-ship.html
+++ b/ready-to-ship.html
@@ -158,7 +158,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/solid-colour-nails.html">
+                                    <a href="./Products/solid-colour-nails.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-425158446" itemscope itemtype="http://schema.org/Product" data-single-product-id="425158446"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Solid Colour Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="24.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -167,7 +167,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/french-nails.html">
+                                    <a href="./Products/french-nails.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545427" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545427"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="French Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="25.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/glitter-nails.html">
+                                    <a href="./Products/glitter-nails.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545423" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545423"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Glitter Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="26.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/tartan-nails.html">
+                                    <a href="./Products/tartan-nails.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-463713010" itemscope itemtype="http://schema.org/Product" data-single-product-id="463713010"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Tartan Nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="27.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/mint-green.html">
+                                    <a href="./Products/mint-green.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545419" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545419"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Mint Green"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="24.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Product_Pages/muted-melody.html">
+                                    <a href="./Products/muted-melody.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-463482070" itemscope itemtype="http://schema.org/Product" data-single-product-id="463482070"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Muted Melody"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="25.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
@@ -271,9 +271,9 @@
                         <ul>
                             <li><a href="./lsglm-story.html">Our Story</a></li>
                             <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
@@ -293,10 +293,7 @@
                     <div class="newslatter-item">
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                            <div class="klaviyo-form-X67KvG"></div>
                     </div>
                 </div>
             </div>
@@ -317,6 +314,16 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
+    <!-- TrustPilot Plugins -->
+    <script>
+        (function(w,d,s,r,n){w.TrustpilotObject=n;w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)};
+            a=d.createElement(s);a.async=1;a.src=r;a.type='text/java'+s;f=d.getElementsByTagName(s)[0];
+            f.parentNode.insertBefore(a,f)})(window,document,'script', 'https://invitejs.trustpilot.com/tp.min.js', 'tp');
+            tp('register', 'p7USu7LzBr8GmK04');
+    </script>
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
     
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
